Report Crime Updates and select image feature turned on

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,21 @@
     <string name="title_activity_report_crime">Map</string>
     <string name="open">1</string>
     <string name="close">2</string>
+    <string-array name="Languages">
+        <item>NDPS Act</item>
+        <item>Gambling Act</item>
+        <item>Arms Act</item>
+        <item>Mineral and Mining Act</item>
+        <item>Immoral Traffic Prevention Act</item>
+        <item>Goonda Act</item>
+        <item>Molestation Act</item>
+        <item>Murder</item>
+        <item>Chain Snatching</item>
+        <item>Fraud/Theft</item>
+        <item>Attempt to Murder</item>
+        <item>Suicide</item>
+        <item>Accidental Case</item>
+        <item>Robbery</item>
+        <item>Money Laundry Case</item>
+    </string-array>
 </resources>
